<resources>
    <string name="app_name">街客旅行</string>
    <string name="load_more">加载更多</string>
    <string name="load_empty">加载为空</string>
    <string name="parse_json_error">解析json出错</string>

    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="date">日期</string>
    <string name="status">状态</string>
    <string name="yuan">元</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!-- index-->
    <string name="home">首页</string>
    <string name="discovery">发现</string>
    <string name="message">消息</string>
    <string name="me">我</string>

    <!-- home fragment-->
    <!-- home fragment & topic-->
    <string name="guider_route">%1$d个达人|%2$d条路线</string>
    <!-- home fragment & route-->
    <string name="unknown">未知</string>
    <!-- guide detail fragment-->
    <string name="guider_detail">达人详情</string>
    <!-- discovery fragment-->
    <string name="landmark">地标</string>
    <!-- me fragment-->
    <string name="my_message">我的消息</string>
    <string name="guider_area">达人专区</string>
    <string name="my_tour">我的旅程</string>
    <string name="my_wallet">我的钱包</string>
    <string name="customer_service">客服</string>
    <string name="setting">设置</string>
    <string name="id">ID:%1$s</string>

    <!-- login fragment-->
    <string name="quick_login">快速登陆</string>
    <string name="login">登陆</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="phone_number_empty">手机号不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="login_hx_error">登陆聊天失败,请尝试重新登陆或与我们联系</string>

    <!-- setting fragment-->
    <string name="more">更多</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="use_helpe">使用帮助</string>
    <string name="about_me">关于我们</string>
    <string name="unlogin">退出登陆</string>
    <string name="cancel_login">注销登录</string>
    <string name="is_sure_cancel_login">是否确定注销登录</string>
    <string name="is_sure_clear_cache">是否确定清除缓存</string>

    <!-- mymessage fragment-->

    <!-- guider_area-->
    <string name="my_order">我的订单</string>
    <string name="guider_information">达人信息</string>
    <string name="receive_route">已领路线</string>
    <string name="order_statistic">订单统计</string>
    <string name="route_community">路线社区</string>
    <string name="guider_order">达人订单</string>

    <!-- my_wallet fragment-->
    <string name="cash">现金</string>
    <string name="can_withdraw_cash">可提现</string>
    <string name="withdraw_cash_explain">提现说明</string>
    <string name="withdraw_cash">提现</string>
    <string name="discount_coupon">优惠券</string>

    <!-- user_edit fragment -->
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="name">姓名</string>
    <string name="phone_number">电话</string>
    <string name="current_living_place">现居地</string>
    <string name="password_setting">密码设置</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="gentle_man">男</string>
    <string name="lady">女</string>
    <string name="introduction">个人介绍</string>
    <string name="tag">标签</string>
    <string name="amend_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_can_not_be_null">密码不能为空</string>
    <string name="password_can_not_less_six">密码不能少于6位</string>
    <string name="password_two_input_not_equal">两次密码输入不一致</string>
    <string name="password_amend_success">修改密码成功</string>

    <!-- receive route fragment-->
    <string name="price_sign">￥</string>
    <string name="old_price">￥%1$s元</string>
    <string name="manage">管理</string>
    <string name="get_route">认领路线</string>

    <!-- order statistic fragment-->
    <string name="check_description">查看详情</string>
    <string name="order">订单</string>
    <string name="route_profit_share">路线分成</string>
    <string name="share_profit_share">分享分成</string>
    <string name="finished_order">已完结的订单:%1$s单</string>
    <string name="order_amount_price">订单总额:%1$s元</string>
    <string name="deduct_profit_share">扣除分成:%1$s元</string>
    <string name="provide_route">提供路线:%1$s条</string>
    <string name="order_number">订单:%1$s次</string>
    <string name="acquire_profit_share">获得分成:%1$s元</string>
    <string name="share_route">分享路线:%1$s条</string>
    <string name="total_profit">总收益:%1$s元</string>
    <string name="suggest_price">建议价格 : ￥%1$d元</string>

    <!-- route detail fragment-->
    <string name="yuan_per_person">元/人</string>
    <string name="appoint_right_now">立即预约</string>
    <string name="customer_service_phone_number">客服电话:</string>
    <string name="is_sure_call_phone">拨打客服电话:%1$s</string>

    <!-- ordersetting fragment-->
    <string name="appoint">预约</string>
    <string name="commit_appoint">提交预约</string>
    <string name="appointment_info">预约信息</string>
    <string name="contacts_info">联系人信息</string>
    <string name="sales_promotion">优惠活动</string>
    <string name="need_pay">需支付:</string>
    <string name="start_date">出发日期</string>
    <string name="appoint_people_count">预定人数</string>
    <string name="appoint_price">预定价格</string>
    <string name="please_select_date">请选择日期</string>

    <!-- guider detail fragment-->
    <string name="contacts">联系一下</string>

    <!-- customer service fragment-->
    <string name="suggest_callback">意见反馈</string>
    <string name="please_input_your_suggest">请输入您的意见</string>
    <string name="real_phone_number">400&#8211;136&#8211;8680</string>
    <string name="commit">提交</string>
    <string name="send_success">发送成功</string>

    <!-- 我的消息-->
    <string name="delete">删除</string>
    <string name="delete_message">删除消息</string>
    <string name="is_sure_delete_message">是否删除消息</string>

    <!-- 日历页面-->
    <string name="appointment_calendar">预约日历</string>

    <!-- 订单详情页面-->
    <string name="begin_date">开始日期</string>
    <string name="pay_cash">支付金额</string>
    <string name="order_pay_number">订单编号</string>
    <string name="appoint_date">预定日期</string>
    <string name="accept">接受</string>
    <string name="order_detail">订单详情</string>

    <!-- 信息详情页面-->
    <string name="message_detail">信息详情</string>

    <!-- voucher fragment 优惠券列表页-->
    <string name="price">0</string>
    <string name="new_user_voucher">新用户代金券</string>
    <string name="validity_period">有效期:</string>
    <string name="oauth_login">第三方登录</string>
    <string name="register_new_user">注册新用户</string>
    <string name="forget_password">忘记密码</string>


</resources>
