<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/receive_route_item_btn_stroke_normal">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">
        <RelativeLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="@string/unknown"
                android:textColor="@color/white"
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/yuan_per_person"
                android:textSize="14sp"
                android:layout_toRightOf="@id/price"
                android:layout_alignBaseline="@id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <TextView
            android:id="@+id/appoint"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/appoint_right_now"
            android:background="@drawable/bg_transparent_white_selector"
            android:textColor="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </RelativeLayout>

</RelativeLayout>