<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_message"
        android:orientation="vertical"
        style="@style/item_layout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/item_title"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_alignBaseline="@id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/item_date"
                android:layout_alignParentRight="true"
                android:textSize="14sp"
                android:textColor="@color/default_text_color"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/item_content"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:textColor="@color/default_text_color"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_alignParentLeft="true"
                />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>