<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/username"
            layout="@layout/item_login_input" />

        <include layout="@layout/item_grey_line" />

        <include
            android:id="@+id/password"
            layout="@layout/item_login_input" />

        <include layout="@layout/item_grey_line" />

        <Button
            android:id="@+id/login"
            style="@style/width_match_parent_button"
            android:layout_width="match_parent"
            android:background="@drawable/bg_login_button_selector"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:textSize="16sp"
                android:text="@string/oauth_login"
                android:textColor="@color/default_text_color"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>
            <ImageView
                android:layout_margin="13dp"
                android:layout_centerVertical="true"
                android:id="@+id/line1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_toRightOf="@+id/title_id"
                android:background="@color/base_grey_line"
                />
            <ImageView
                android:layout_margin="13dp"
                android:layout_centerVertical="true"
                android:id="@+id/line2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_toLeftOf="@+id/title_id"
                android:background="@color/base_grey_line" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/qq"
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_qq_selector"
                />
            <ImageView
                android:id="@+id/weixin"
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_weixin_selector"
                />
            <ImageView
                android:id="@+id/weibo"
                android:layout_margin="20dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_weibo_selector"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/archor"
                android:layout_gravity="center_vertical"
                android:background="@color/base_grey_line"
                android:layout_centerInParent="true"
                android:layout_width="1dp"
                android:layout_height="20dp"/>
            <TextView
                android:layout_toLeftOf="@id/archor"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/register_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/archor"
                android:text="@string/forget_password"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>